<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    style="@style/stock_list_sort"
    >

    <RelativeLayout
        android:layout_width="@dimen/offset_0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        >

        <TextView
            android:text="@string/customize_stock_sort_all"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/offset_10dp"
            style="@style/stock_list_sort_txt"
            />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/offset_0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        >

        <TextView
            android:id="@+id/tv_customize_sort_price"
            android:text="@string/customize_stock_sort_price"
            android:layout_centerInParent="true"
            style="@style/stock_list_sort_txt"
            />





    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/offset_0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        >

        <TextView
            android:id="@+id/tv_customize_sort_rate"
            android:text="@string/customize_stock_sort_rate"
            android:layout_centerInParent="true"
            style="@style/stock_list_sort_txt"
            />




    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/offset_0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        >

        <TextView
            android:id="@+id/tv_customize_sort_turnover"
            android:text="@string/customize_stock_sort_turnover"
            android:layout_centerInParent="true"
            style="@style/stock_list_sort_txt"
            />

    </RelativeLayout>

</LinearLayout>